--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,147 @@
-<p>login works!</p>
+<div class="modal">
+  <mat-tab-group animationDuration="400ms">
+    <mat-tab label="Log in">
+      <div class="log-in-block">
+        <div class="body-split-line">
+          <span class="line"></span>
+          <span class="text">or log in with your email</span>
+          <span class="line"></span>
+        </div>
+        <form class="form-block" [formGroup]="logInForm">
+          <mat-form-field appearance="outline">
+            <mat-label>Email</mat-label>
+            <input matInput type="text" formControlName="username" />
+            <mat-error *ngIf="logInForm.get('email')?.invalid"
+              >Invalid character</mat-error
+            >
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              formControlName="password"
+            />
+            <button
+              mat-icon-button
+              matSuffix
+              (click)="hide = !hide"
+              [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide"
+            >
+            </button>
+            <mat-error *ngIf="logInForm.get('password')?.invalid"
+              >Invalid character</mat-error
+            >
+          </mat-form-field>
+          <div>
+            <button mat-raised-button (click)="login()" class="submit">
+              Log in
+            </button>
+          </div>
+        </form>
+      </div>
+    </mat-tab>
+    <mat-tab label="Sing up">
+      <div class="register-block">
+        <div class="body-split-line">
+          <span class="line"></span>
+          <span class="text">or log in with your email</span>
+          <span class="line"></span>
+        </div>
+        <form [formGroup]="registerForm">
+          <mat-form-field appearance="outline">
+            <mat-label>Email</mat-label>
+            <input matInput type="text" formControlName="email" />
+            <mat-error *ngIf="registerForm.get('email')?.invalid"
+              >Invalid character</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input matInput type="text" formControlName="password" />
+            <mat-error *ngIf="registerForm.get('password')?.invalid"
+              >Invalid character</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>First name</mat-label>
+            <input matInput type="text" formControlName="firstName" />
+            <mat-error *ngIf="registerForm.get('firstName')?.invalid"
+              >Invalid character</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Last name</mat-label>
+            <input matInput type="text" formControlName="lastName" />
+            <mat-error *ngIf="registerForm.get('lastName')?.invalid"
+              >Invalid character</mat-error
+            >
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Date of birth</mat-label>
+            <input
+            (click)="pickDate(picker)"
+              matInput
+              [readonly]="true"
+              [matDatepicker]="picker"
+              formControlName="birthday"
+              >
+            <mat-error *ngIf="registerForm.get('birthday')?.invalid">Invalid character</mat-error>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker ></mat-datepicker>
+          </mat-form-field>
+
+          <div class="autocomplete">
+            <mat-form-field appearance="outline">
+              <mat-label>Country code</mat-label>
+              <mat-select formControlName="countryCode" required>
+                <mat-option *ngFor="let document of documents" [value]="document">
+                  <span>{{ document.name }} ({{document.code}})</span>
+                </mat-option>
+              </mat-select>
+              <mat-error *ngIf="registerForm.get('countryCode')?.invalid">Error country code</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Mobile phone number</mat-label>
+              <input matInput type="text" formControlName="phoneNumber" />
+              <mat-error *ngIf="registerForm.get('phoneNumber')?.invalid">Invalid character</mat-error>
+            </mat-form-field>
+          </div>
+
+          <mat-form-field appearance="outline">
+            <mat-label>Citizenship</mat-label>
+            <mat-select formControlName="document" required>
+              <mat-option *ngFor="let document of documents" [value]="document">
+                <span>{{ document.name }}</span>
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="registerForm.get('document')?.invalid"
+              >Please choose document</mat-error
+            >
+          </mat-form-field>
+
+          <div class="agree">
+            <label>
+              <input type="checkbox" checked />
+              <span>I agree to Airway's Privacy Policy and Terms of Use</span>
+            </label>
+          </div>
+
+          <div>
+            <button
+              class="submit"
+              mat-raised-button
+              type="button"
+              (click)="register()"
+            >
+              Sign up
+            </button>
+          </div>
+        </form>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</div>
+<div class="overlay"></div>
