--- a/src/app/auth/login.component.scss
+++ b/src/app/auth/login.component.scss
@@ -9,7 +9,7 @@ form {
 .overlay {
   width: 100%;
   height: 100%;
-  background: url('../../../assets/images/1674615295_top-fon-com-p-zvezdnie-voini-fon-dlya-prezentatsii-78.png') no-repeat;
+  background: url('../../assets/images/1674615295_top-fon-com-p-zvezdnie-voini-fon-dlya-prezentatsii-78.png') no-repeat;
   background-size: cover;
 }
 .modal {
