fix: login scrollbar style changed

--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -47,7 +47,7 @@
       <div class="register-block">
         <div class="body-split-line">
           <span class="line"></span>
-          <span class="text">or log in with your email</span>
+          <span class="text">or sign up with your email</span>
           <span class="line"></span>
         </div>
         <form [formGroup]="registerForm">
