feat: added http client module

--- a/src/app/auth/login.component.html
+++ b/src/app/auth/login.component.html
@@ -36,7 +36,7 @@
             <mat-icon>remove_red_eye</mat-icon>
             </button>
             @if (logInForm.get('password')?.invalid) {
-              <mat-error>Enter your passport please</mat-error>
+              <mat-error>Enter your password please</mat-error>
             }
 
           </mat-form-field>
