--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<nav class="mask-pattern">
+  <a href="#">Mask with linear-gradient and repeated image</a>
+  <ul class="list">
+    <li><a href="#">About</a></li>
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">News</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+  <button class="search">Search</button>
+  <button class="menu">Menu</button>
+</nav>
