--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,11 +1,2 @@
-<nav class="mask-pattern">
-  <a href="#">Mask with linear-gradient and repeated image</a>
-  <ul class="list">
-    <li><a href="#">About</a></li>
-    <li><a href="#">Projects</a></li>
-    <li><a href="#">News</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-  <button class="search">Search</button>
-  <button class="menu">Menu</button>
-</nav>
+<h1>nav works</h1>
+
