--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,14 +12,54 @@
     [opened]="isMobile ? 'false' : 'true'"
   >
     <mat-nav-list>
-      <a mat-list-item>
+      <a mat-list-item routerLink="/home">
         <span class="entry">
           <mat-icon>house</mat-icon>
           @if (!isCollapsed) {
-            <span>Dashboard</span>
+          <span>Dashboard</span>
           }
         </span>
       </a>
+      <a mat-list-item routerLink="/people">
+        <span class="entry">
+          <mat-icon>people</mat-icon>
+          @if (!isCollapsed) {
+          <span>People</span>
+          }
+        </span>
+      </a>
+      <a mat-list-item routerLink="/films">
+        <span class="entry">
+          <mat-icon>movie</mat-icon>
+          @if (!isCollapsed) {
+          <span>Films</span>
+          }
+        </span>
+      </a>
+      <a mat-list-item routerLink="/planets">
+        <span class="entry">
+          <mat-icon>stars</mat-icon>
+          @if (!isCollapsed) {
+          <span>Planets</span>
+          }
+        </span></a
+      >
+      <a mat-list-item routerLink="/transport">
+        <span class="entry">
+          <mat-icon>directions_car</mat-icon>
+          @if (!isCollapsed) {
+          <span>Transport</span>
+          }
+        </span></a
+      >
+      <a mat-list-item routerLink="/ships">
+        <span class="entry">
+          <mat-icon>directions_boat</mat-icon>
+          @if (!isCollapsed) {
+          <span>Ships</span>
+          }
+        </span></a
+      >
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
