--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     [opened]="isMobile ? 'false' : 'true'"
   >
     <mat-nav-list>
-      <a mat-list-item routerLink="/home">
+      <a mat-list-item routerLink="/home" routerLinkActive="active">
         <span class="entry">
           <mat-icon>house</mat-icon>
           @if (!isCollapsed) {
@@ -20,7 +20,7 @@
           }
         </span>
       </a>
-      <a mat-list-item routerLink="/people">
+      <a mat-list-item routerLink="/people" routerLinkActive="active">
         <span class="entry">
           <mat-icon>people</mat-icon>
           @if (!isCollapsed) {
@@ -28,7 +28,7 @@
           }
         </span>
       </a>
-      <a mat-list-item routerLink="/films">
+      <a mat-list-item routerLink="/films" routerLinkActive="active">
         <span class="entry">
           <mat-icon>movie</mat-icon>
           @if (!isCollapsed) {
@@ -36,7 +36,7 @@
           }
         </span>
       </a>
-      <a mat-list-item routerLink="/planets">
+      <a mat-list-item routerLink="/planets" routerLinkActive="active">
         <span class="entry">
           <mat-icon>stars</mat-icon>
           @if (!isCollapsed) {
@@ -44,7 +44,7 @@
           }
         </span></a
       >
-      <a mat-list-item routerLink="/transport">
+      <a mat-list-item routerLink="/transport" routerLinkActive="active">
         <span class="entry">
           <mat-icon>directions_car</mat-icon>
           @if (!isCollapsed) {
@@ -52,7 +52,7 @@
           }
         </span></a
       >
-      <a mat-list-item routerLink="/ships">
+      <a mat-list-item routerLink="/ships" routerLinkActive="active">
         <span class="entry">
           <mat-icon>directions_boat</mat-icon>
           @if (!isCollapsed) {
