fix: router changed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
           }
         </span>
       </a>
-      <a mat-list-item routerLink="/people" routerLinkActive="active">
+      <a mat-list-item routerLink="/home/people" routerLinkActive="active">
         <span class="entry">
           <mat-icon>people</mat-icon>
           @if (!isCollapsed) {
@@ -28,7 +28,7 @@
           }
         </span>
       </a>
-      <a mat-list-item routerLink="/films" routerLinkActive="active">
+      <a mat-list-item routerLink="/home/films" routerLinkActive="active">
         <span class="entry">
           <mat-icon>movie</mat-icon>
           @if (!isCollapsed) {
@@ -36,7 +36,7 @@
           }
         </span>
       </a>
-      <a mat-list-item routerLink="/planets" routerLinkActive="active">
+      <a mat-list-item routerLink="/home/planets" routerLinkActive="active">
         <span class="entry">
           <mat-icon>stars</mat-icon>
           @if (!isCollapsed) {
@@ -44,7 +44,7 @@
           }
         </span></a
       >
-      <a mat-list-item routerLink="/transport" routerLinkActive="active">
+      <a mat-list-item routerLink="/home/transport" routerLinkActive="active">
         <span class="entry">
           <mat-icon>directions_car</mat-icon>
           @if (!isCollapsed) {
@@ -52,7 +52,7 @@
           }
         </span></a
       >
-      <a mat-list-item routerLink="/ships" routerLinkActive="active">
+      <a mat-list-item routerLink="/home/ships" routerLinkActive="active">
         <span class="entry">
           <mat-icon>directions_boat</mat-icon>
           @if (!isCollapsed) {
