--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
     [opened]="isMobile ? 'false' : 'true'"
   >
     <mat-nav-list>
-      <a mat-list-item routerLink="/home" routerLinkActive="active">
+      <a mat-list-item routerLink="/home">
         <span class="entry">
           <mat-icon>house</mat-icon>
           @if (!isCollapsed) {
