fix: home padding changed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
         <span class="entry">
           <mat-icon>house</mat-icon>
           @if (!isCollapsed) {
-          <span>Dashboard</span>
+          <span>Home</span>
           }
         </span>
       </a>
