--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles.scss';
+
 h1 {
   padding: 0 1rem;
 }
@@ -30,7 +32,7 @@ mat-sidenav {
     display: flex;
     align-items: center;
     gap: 1rem;
-    color: #673ab7;
+    color: $purple;
     padding: 0.75rem;
   }
 }
