--- a/src/app/home/pages/films/films.component.html
+++ b/src/app/home/pages/films/films.component.html
@@ -1,1 +1,19 @@
-<p>films works!</p>
+<div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 1.5rem;">
+  @for (film of films().results; track $index) {
+    <mat-card class="card">
+      <mat-card-header>
+        <mat-card-title>{{film.title}}</mat-card-title>
+        <mat-card-subtitle>{{film.created | date: 'mediumDate'}}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          {{film.opening_crawl}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>MORE</button>
+      </mat-card-actions>
+    </mat-card>
+  }
+</div>
+
