--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 mat-icon{
   font-family: 'Material Icons' !important;
 }
+
+$purple: #673ab7
