--- a/src/app/home/pages/films/films.component.html
+++ b/src/app/home/pages/films/films.component.html
@@ -11,7 +11,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>MORE</button>
+        <button mat-button (click)="detailCard(film.url)">MORE</button>
       </mat-card-actions>
     </mat-card>
   }
