people layout and change style

--- a/src/app/home/pages/films/films.component.html
+++ b/src/app/home/pages/films/films.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 1.5rem;">
+<div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
   @for (film of films().results; track $index) {
     <mat-card class="card">
       <mat-card-header>
