--- a/src/app/home/pages/films/films.component.scss
+++ b/src/app/home/pages/films/films.component.scss
@@ -1,11 +1,14 @@
-@import "../../../../styles.scss";
-
-.card {
-  max-width: 350px;
-  background-color: $purple;
-  color: white;
+mat-card {
+  width: 30%;
 }
-mat-card-subtitle,
-mat-card-actions>button {
-  color: white;
+@media (max-width: 1000px) {
+  mat-card {
+    width: 45%;
+  }
+}
+
+@media (max-width: 576px) {
+  mat-card {
+    width: 100%;
+  }
 }
