feat: added pagination to people component

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -43,4 +43,5 @@ mat-sidenav {
 mat-sidenav-content {
   padding: 5rem 2.5rem;
   background: url("../../assets/images/bg.jpg") no-repeat;
+  background-attachment: fixed;
 }
