--- a/src/app/home/pages/people/people.component.html
+++ b/src/app/home/pages/people/people.component.html
@@ -18,3 +18,9 @@
   </mat-card>
   }
 </div>
+
+<mat-paginator
+  [length]="peopleSig().count"
+  [pageSize]="pageSize"
+  (page)="handlePageEvent($event)"
+></mat-paginator>
