feat: added dialog component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
     <mat-icon>menu</mat-icon>
   </button>
   <h1>Star Wars</h1>
+  <button mat-button (click)="logout()">Log out</button>
 </mat-toolbar>
 
 <mat-sidenav-container autosize>
