feat: added ships layout

--- a/src/app/home/pages/ships/ships.component.html
+++ b/src/app/home/pages/ships/ships.component.html
@@ -1,1 +1,32 @@
-<p>ships works!</p>
+<div class="ships">
+  <div class="ships_box">
+    @for (starship of shipsSig().results; track $index) {
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>{{ starship.name }}</mat-card-title>
+          <mat-card-subtitle>{{ starship.model }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <p>Manufacturer: {{ starship.manufacturer }}</p>
+          <p>Cost in Credits: {{ starship.cost_in_credits }}</p>
+          <p>Length: {{ starship.length }} meters</p>
+          <p>Max Atmosphering Speed: {{ starship.max_atmosphering_speed }}</p>
+          <p>Crew: {{ starship.crew }}</p>
+          <p>Passengers: {{ starship.passengers }}</p>
+          <p>Cargo Capacity: {{ starship.cargo_capacity }}</p>
+          <p>Consumables: {{ starship.consumables }}</p>
+          <p>Hyperdrive Rating: {{ starship.hyperdrive_rating }}</p>
+          <p>MGLT: {{ starship.MGLT }}</p>
+          <p>Starship Class: {{ starship.starship_class }}</p>
+        </mat-card-content>
+      </mat-card>
+
+    }
+  </div>
+
+  <mat-paginator
+  [length]="shipsSig().count"
+  [pageSize]="pageSize"
+  (page)="handlePageEvent($event)"
+></mat-paginator>
+</div>
