--- a/src/app/home/pages/tansport/tansport.component.html
+++ b/src/app/home/pages/tansport/tansport.component.html
@@ -1,1 +1,29 @@
-<p>tansport works!</p>
+<div class="transport">
+  <div class="transport_box">
+    @for (vehicle of transportSig().results; track $index) {
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>{{ vehicle.name }}</mat-card-title>
+          <mat-card-subtitle>{{ vehicle.model }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <p>Manufacturer: {{ vehicle.manufacturer }}</p>
+          <p>Cost in Credits: {{ vehicle.cost_in_credits }}</p>
+          <p>Length: {{ vehicle.length }}m</p>
+          <p>Max Atmosphering Speed: {{ vehicle.max_atmosphering_speed }}</p>
+          <p>Crew: {{ vehicle.crew }}</p>
+          <p>Passengers: {{ vehicle.passengers }}</p>
+          <p>Cargo Capacity: {{ vehicle.cargo_capacity }}</p>
+          <p>Consumables: {{ vehicle.consumables }}</p>
+          <p>Vehicle Class: {{ vehicle.vehicle_class }}</p>
+        </mat-card-content>
+      </mat-card>
+    }
+  </div>
+
+  <mat-paginator
+  [length]="transportSig().count"
+  [pageSize]="pageSize"
+  (page)="handlePageEvent($event)"
+></mat-paginator>
+</div>
