fix: see detail url and style changed

--- a/src/app/shared/components/details/details.component.scss
+++ b/src/app/shared/components/details/details.component.scss
@@ -4,6 +4,7 @@
   background: rgba($color: #673ab7, $alpha: .4);
   color: #fff;
   font-size: 18px;
+  width: 100%;
 }
 mat-card-content {
   display: flex;
