--- a/src/app/home/pages/planets/planets.component.html
+++ b/src/app/home/pages/planets/planets.component.html
@@ -1,12 +1,15 @@
 <div class="planets">
   <div class="planets_box">
     @for (planet of planetsSig().results; track $index) {
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>{{ planet.name }}</mat-card-title>
-          <mat-card-subtitle>Population: {{ planet.population }}</mat-card-subtitle>
-        </mat-card-header>
-        <mat-card-content>
+      <app-card>
+        <ng-template #headerTemplate>
+          <mat-card-header>
+            <mat-card-title>{{ planet.name }}</mat-card-title>
+            <mat-card-subtitle>Population: {{ planet.population }}</mat-card-subtitle>
+          </mat-card-header>
+        </ng-template>
+
+        <ng-template #contentTemplate>
           <p>Climate: {{ planet.climate }}</p>
           <p>Terrain: {{ planet.terrain }}</p>
           <p>Gravity: {{ planet.gravity }}</p>
@@ -14,11 +17,8 @@
           <p>Rotation Period: {{ planet.rotation_period }} hours</p>
           <p>Orbital Period: {{ planet.orbital_period }} days</p>
           <p>Diameter: {{ planet.diameter }} km</p>
-        </mat-card-content>
-        <!-- <mat-card-actions>
-          <a href="{{ planet.url }}" target="_blank">Learn More</a>
-        </mat-card-actions> -->
-      </mat-card>
+        </ng-template>
+      </app-card>
     }
   </div>
 
