--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,6 +14,12 @@ mat-toolbar {
   z-index: 2;
 }
 
+.settings-info,
+.user-info {
+  display: flex;
+  align-items: center;
+}
+
 mat-sidenav-container {
   height: 100%;
 }
