--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -49,5 +49,6 @@ mat-sidenav {
 mat-sidenav-content {
   padding: 5rem 2.5rem;
   background: url("../../assets/images/bg.jpg") no-repeat;
+  background-size: cover;
   background-attachment: fixed;
 }
